trying to squash disappear bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,13 @@ background: #ffc0cb;
 height: 4px;
 }
 
+.scrolls {
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
+}
+
 .album-container { 
     width: 100%; 
     height: 160px; 
